--- a/src/components/Cart/cart.module.css
+++ b/src/components/Cart/cart.module.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   max-height: 20rem;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .total {
@@ -44,3 +44,4 @@
   background-color: #8a2b06;
   color: white;
 }
+
